inserts observation and imageUrl in Service doc definition
