# src/modules/services/infra/dtos/ICreateServiceDTO.ts
@@ -1,6 +1,8 @@
 interface ICreateServiceDTO {
   description: string;
   category: string;
+  observation: string;
+  imageUrl: string;
 }
 
 export { ICreateServiceDTO };
